--- a/README.adoc
+++ b/README.adoc
@@ -8,9 +8,9 @@ image:https://spring.io/badges/spring-data-neo4j/ga.svg[Spring Data Neo4j,link=h
 :artifactId: spring-data-neo4j
 :artifactIdStarter: spring-boot-starter-data-neo4j
 
-:neo4j-version: 4.0.4
-:spring-boot-version: 2.4.0.M3
-:spring-data-neo4j-version: 6.0.0-SNAPSHOT
+:neo4j-version: 4.1.3
+:spring-boot-version: 2.4.0-RC1
+:spring-data-neo4j-version: 6.0.0
 // end::properties[]
 
 [abstract]
