--- a/src/main/asciidoc/introduction-and-preface/building-blocks.adoc
+++ b/src/main/asciidoc/introduction-and-preface/building-blocks.adoc
@@ -10,7 +10,7 @@ All configuration options of the driver are accessible in the namespace `spring.
 The driver bean provides imperative, asynchronous and reactive methods to interact with Neo4j.
 
 You can use all transaction methods the driver provides on that bean such as https://neo4j.com/docs/driver-manual/4.0/terminology/#term-auto-commit[auto-commit transactions],
-https://neo4j.com/docs/driver-manual/4.0/terminology/#term-auto-commit[transaction functions] and unmanaged transactions.
+https://neo4j.com/docs/driver-manual/4.0/terminology/#term-transaction-function[transaction functions] and unmanaged transactions.
 Be aware that those transactions are not tight to an ongoing Spring transaction.
 
 Integration with Spring Data and Spring's platform or reactive transaction manager starts at the <<neo4j-client,Neo4j Client>>.
