--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@ image:https://spring.io/badges/spring-data-neo4j/ga.svg[Spring Data Neo4j,link=h
 :sectanchors:
 
 // tag::properties[]
-:neo4jGroupId: org.springframework.data.neo4j
+:neo4jGroupId: org.springframework.data
 :artifactId: spring-data-neo4j
 :groupIdStarter: org.springframework.boot
 :artifactIdStarter: spring-boot-starter-data-neo4j
