--- a/src/main/asciidoc/appendix/conversions.adoc
+++ b/src/main/asciidoc/appendix/conversions.adoc
@@ -205,7 +205,7 @@ If you need multiple converters in your application, you can add as many as you 
 === For specific attributes only
 
 If you need conversions only for some specific attributes, we provide `@ConvertWith`.
-This is an annotation that can be put on attributes carrying a `Neo4jPersistentPropertyConverter` on it's `converter` attribute
+This is an annotation that can be put on attributes carrying a `Neo4jPersistentPropertyConverter` on its `converter` attribute
 and an optional `Neo4jPersistentPropertyConverterFactory` to construct the former.
 With an implementation of `Neo4jPersistentPropertyConverter` all specific conversions for a given type can be addressed.
 
@@ -214,7 +214,7 @@ We provide `@DateLong` and `@DateString` as meta-annotated annotations for backw
 [[composite-properties]]
 ==== Composite properties
 
-With `@CompositeProperty`, attributes of type `Map<String, Object>` or Map<? extends Enum, Object>` can be stored as composite properties.
+With `@CompositeProperty`, attributes of type `Map<String, Object>` or `Map<? extends Enum, Object>` can be stored as composite properties.
 All entries inside the map will be added as properties to the node or relationship containing the property.
 Either with a configured prefix or prefixed with the name of the property.
 While we only offer that feature for maps out of the box, you can `Neo4jPersistentPropertyToMapConverter` and configure it
