--- a/src/main/asciidoc/appendix/migrating.adoc
+++ b/src/main/asciidoc/appendix/migrating.adoc
@@ -10,7 +10,7 @@ Having skipped more than one major upgrade::
 While Neo4j-OGM can be used stand-alone, Spring Data Neo4j cannot.
 It depends to large extend on the Spring Data and therefore, on the Spring Framework itself, which eventually affects large parts of your application.
 Depending on how the application has been structured, that is, how much the any of the framework part leaked into your business code, the more you have to adapt your application.
-It get's worse when you have more than one Spring Data module in your application, if you accessed a relational database in the same service layer as your graph database.
+It gets worse when you have more than one Spring Data module in your application, if you accessed a relational database in the same service layer as your graph database.
 Updating two object mapping frameworks is not fun.
 Relying on a embedded database configured through Spring Data itself::
 The embedded database in a SDN+OGM project is configured by Neo4j-OGM.
@@ -23,7 +23,7 @@ Spring Data however depends on Spring Framework and than the arguments from the 
 Being unsure about which building blocks to include::
 It's not easy to get the terms right.
 We wrote the building blocks of an SDN+OGM setting https://michael-simons.github.io/neo4j-sdn-ogm-tips/what_are_the_building_blocks_of_sdn_and_ogm.html[here].
-It may be so that all of them have been added by coincidence and you're dealing with a lof of conflicting dependencies.
+It may be so that all of them have been added by coincidence and you're dealing with a lot of conflicting dependencies.
 
 TIP: Backed by those observations, we recommend to make sure you're using only the Bolt or http transport in your current application before switching from SDN+OGM to SDN.
 Thus, your application and the access layer of your application is to large extend independent from the databases version.
@@ -38,11 +38,11 @@ First, you must make sure that your application runs against Neo4j in server mod
 === You're on embedded
 
 You have added `org.neo4j:neo4j-ogm-embedded-driver` and `org.neo4j:neo4j` to you project and starting the database via OGM facilities.
-This is no longer supported and you have to setup a standard Neo4j server (both standalone and cluster are supported).
+This is no longer supported and you have to set up a standard Neo4j server (both standalone and cluster are supported).
 
 The above dependencies have to be removed.
 
-Migrating from the embedded solution is probably the toughest migration, as you need to setup a server, too.
+Migrating from the embedded solution is probably the toughest migration, as you need to set up a server, too.
 It is however the one that gives you much value in itself:
 In the future, you will be able to upgrade the database itself without having to consider your application framework, and your data access framework as well.
 
@@ -74,7 +74,7 @@ With our starter in place, all the necessary bits apart from the connection URL 
 .Old and new properties compared
 ----
 # Old
-spring.data.neo4j.embedded.enabled=false # No longer support
+spring.data.neo4j.embedded.enabled=false # No longer supported
 spring.data.neo4j.uri=bolt://localhost:7687
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=secret
@@ -85,11 +85,11 @@ spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=secret
 ----
 
-WARNING: Those new properties might change in the future again when SDN and the driver will eventually replace the old setup fully.
+WARNING: Those new properties might change in the future again when SDN and the driver eventually fully replace the old setup.
 
 And finally, add the new dependency, see <<getting-started>> for both Gradle and Maven.
 
-You're than ready to replace annotations:
+You're then ready to replace annotations:
 
 [cols="2*",options="header"]
 |===
@@ -126,7 +126,7 @@ We will add to the list above as we support additional features.
 === Bookmarkmanagement
 
 Both `@EnableBookmarkManagement` and `@UseBookmark` as well as the `org.springframework.data.neo4j.bookmark.BookmarkManager`
-interface and it's only implementation `org.springframework.data.neo4j.bookmark.CaffeineBookmarkManager` are gone and are not needed anymore.
+interface and its only implementation `org.springframework.data.neo4j.bookmark.CaffeineBookmarkManager` are gone and are not needed anymore.
 
 SDN uses Bookmarks for all transactions, without configuration.
 You can remove the bean declaration of `CaffeineBookmarkManager` as well as the the dependency to `com.github.ben-manes.caffeine:caffeine`.
