DATAGRAPH-1421 - Add another round of copy editing.
Co-authored-by: Michael Simons <michael@simons.ac>

--- a/README.adoc
+++ b/README.adoc
@@ -4,13 +4,14 @@ image:https://spring.io/badges/spring-data-neo4j/ga.svg[Spring Data Neo4j,link=h
 :sectanchors:
 
 // tag::properties[]
-:neo4jGroupId: org.springframework.data.neo4j
+:neo4jGroupId: org.springframework.data
 :artifactId: spring-data-neo4j
+:groupIdStarter: org.springframework.boot
 :artifactIdStarter: spring-boot-starter-data-neo4j
 
-:neo4j-version: 4.0.4
-:spring-boot-version: 2.4.0.M3
-:spring-data-neo4j-version: 6.0.0-SNAPSHOT
+:neo4j-version: 4.1.3
+:spring-boot-version: 2.4.0-RC1
+:spring-data-neo4j-version: 6.0.0
 // end::properties[]
 
 [abstract]
@@ -32,7 +33,7 @@ Please report unacceptable behavior to spring-code-of-conduct@pivotal.io.
 == Manual
 
 For a gentle introduction and some getting started guides, please use our
-https://neo4j.github.io/sdn-rx[Manual].
+https://docs.spring.io/spring-data/neo4j/docs/current/reference/html/#reference[Manual].
 
 == Getting Started
 
@@ -60,7 +61,7 @@ spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=secret
 ----
 
-Please have a look at our https://neo4j.github.io/sdn-rx[manual] for an overview about the architecture, how to define
+Please have a look at our https://docs.spring.io/spring-data/neo4j/docs/current/reference/html/#reference[manual] for an overview about the architecture, how to define
 mappings and more.
 
 ==== Without Spring Boot
