--- a/src/main/asciidoc/introduction-and-preface/preface.adoc
+++ b/src/main/asciidoc/introduction-and-preface/preface.adoc
@@ -1,7 +1,7 @@
 [[preface.nosql]]
 = NoSQL and Graph databases
 
-A graph database is a storage engine that is specialized in storing and retrieving vast networks of information.
+A graph database is a storage engine that specializes in storing and retrieving vast networks of information.
 It efficiently stores data as nodes with relationships to other or even the same nodes, thus allowing high-performance retrieval and querying of those structures.
 Properties can be added to both nodes and relationships.
 Nodes can be labelled by zero or more labels, relationships are always directed and named.
@@ -25,7 +25,6 @@ Here is a list of useful resources:
 * The https://neo4j.com/docs/[Neo4j documentation] introduces Neo4j and contains links to getting started guides, reference documentation and tutorials.
 * The https://neo4j.com/sandbox/[online sandbox] provides a convenient way to interact with a Neo4j instance in combination with the online https://neo4j.com/developer/get-started/[tutorial].
 * Neo4j https://neo4j.com/developer/java/[Java Bolt Driver]
-* https://neo4j.com/docs/ogm-manual/current/[Neo4j Object Graph Mapper (OGM) Library]
 * Several https://neo4j.com/books/[books] available for purchase and https://www.youtube.com/neo4j[videos] to watch.
 
 [[preface.spring-data]]
@@ -53,7 +52,7 @@ There are a lot of articles, blog entries and books on the matter - take a look 
 == What is Spring Data Neo4j
 
 The current Spring Data Neo4j is the successor to Spring Data Neo4j + Neo4j-OGM.
-The separate layer of Neo4j-OGM (Neo4j Object Graph Mapper) has been replaced by Spring infrastructure, but the basic concepts of an Object Graph Mapper (OGM) still apply:
+The separate layer of Neo4j-OGM (Neo4j Object Graph Mapper) has been replaced by Spring infrastructure, but the basic concepts of an Object Graph Mapper (OGM) still apply.
 
 An OGM maps nodes and relationships in the graph to objects and references in a domain model.
 Object instances are mapped to nodes while object references are mapped using relationships, or serialized to properties (e.g. references to a Date).
@@ -63,7 +62,7 @@ It also provides the flexibility to the developer to supply custom queries where
 
 === What's in the box?
 
-Spring Data Neo4j or in short SDN is a next-generation https://spring.io/projects/spring-data[Spring Data] module, created and maintained by https://neo4j.com[Neo4j, Inc.] in close collaboration with https://pivotal.io[Pivotal's] Spring Data Team.
+Spring Data Neo4j or in short SDN is a next-generation https://spring.io/projects/spring-data[Spring Data] module, created and maintained by https://neo4j.com[Neo4j, Inc.] in close collaboration with https://www.vmware.com/[VMware's] Spring Data Team.
 
 SDN relies completely on the https://github.com/neo4j/neo4j-java-driver[Neo4j Java Driver], without introducing another "driver" or "transport" layer between the mapping framework and the driver.
 The Neo4j Java Driver - sometimes dubbed Bolt or the Bolt driver - is used as a protocol much like JDBC is with relational databases.
@@ -85,11 +84,11 @@ SDN has several features not present in SDN+OGM, notably
 
 === How does SDN relate to Neo4j-OGM?
 
-https://neo4j.com/docs/ogm-manual/current/[Neo4j-OGM] is an Object Graph Mapping library, which is mainly used by Spring Data Neo4j as its backend for the heavy lifting of mapping nodes and relationships into domain object.
-The new SDN *does not need* and *does not support* Neo4j-OGM.
+https://neo4j.com/docs/ogm-manual/current/[Neo4j-OGM] is an Object Graph Mapping library, which is mainly used by previous versions of Spring Data Neo4j as its backend for the heavy lifting of mapping nodes and relationships into domain object.
+The current SDN *does not need* and *does not support* Neo4j-OGM.
 SDN uses Spring Data's mapping context exclusively for scanning classes and building the meta model.
 
-While this pins SDN to the Spring eco systems, it has several advantages, among them the smaller footprint in regards of CPU and memory usage and especially, all the features of Springs mapping context.
+While this pins SDN to the Spring ecosystem, it has several advantages, among them the smaller footprint regarding CPU and memory usage and especially, all the features of Spring's mapping context.
 
 === Does SDN support connections over HTTP to Neo4j?
 
